--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "advent-of-code-2024"
-version = "0.7.0"
+version = "0.7.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,6 +18,7 @@ winnow = "0.5.28"
 num = { version = "0.4.1", features = ["num-bigint"] }
 # mapgrid = { version = "0.1.0", path = "mapgrid" }
 rayon = "1.8.0"
+memoize = "0.4.2"
 
 [workspace]
 members = ["day-*", "template"] # "mapgrid"
