--- a/day-07/Cargo.toml
+++ b/day-07/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "day-07"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.75"
 clap = { version = "4.4.10", features = ["derive"] }
 itertools = "0.12.0"
+memoize = "0.4.2"
 nom = "7.1.3"
 regex = "1.10.2"
 strum = { version = "0.25.0", features = ["derive"] }
