--- a/day-10/Cargo.toml
+++ b/day-10/Cargo.toml
@@ -12,3 +12,4 @@ itertools = "0.12.0"
 nom = "7.1.3"
 regex = "1.10.2"
 strum = { version = "0.25.0", features = ["derive"] }
+mapgrid = { version = "0.2.0", path = "../mapgrid" }
