--- a/day-13/Cargo.toml
+++ b/day-13/Cargo.toml
@@ -13,3 +13,4 @@ nom = "7.1.3"
 regex = "1.10.2"
 strum = { version = "0.25.0", features = ["derive"] }
 mapgrid = { version = "0.2.0", path = "../mapgrid" }
+num = "0.4.3"
