--- a/day-14/Cargo.toml
+++ b/day-14/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "day-14"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,3 +13,4 @@ nom = "7.1.3"
 regex = "1.10.2"
 strum = { version = "0.25.0", features = ["derive"] }
 mapgrid = { version = "0.2.0", path = "../mapgrid" }
+rayon = "1.10.0"
