--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ mapgrid = { version = "0.2.0", path = "mapgrid" }
 rayon = "1.8.0"
 memoize = "0.4.2"
 range_split = { git = "https://github.com/alexjago/range-split", version = "0.1.0" }
+log = "0.4.22"
+env_logger = "0.11.5"
+clap-verbosity-flag = "3.0.2"
 
 [workspace]
 members = ["day-*", "template", "mapgrid"]
