--- a/day-17/Cargo.toml
+++ b/day-17/Cargo.toml
@@ -13,3 +13,6 @@ nom = "7.1.3"
 regex = "1.10.2"
 strum = { version = "0.25.0", features = ["derive"] }
 mapgrid = { version = "0.2.0", path = "../mapgrid" }
+env_logger = "0.11.5"
+log = "0.4.22"
+clap-verbosity-flag = "3.0.2"
